View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0030553 | Community | OCCT:Coding | public | 2019-03-11 18:13 | 2019-09-18 16:26 |
Reporter | galbramc | Assigned To | apn | ||
Priority | normal | Severity | major | ||
Status | closed | Resolution | fixed | ||
Product Version | 5.2.2 | ||||
Target Version | 7.4.0 | Fixed in Version | 7.4.0 | ||
Summary | 0030553: Coding - TopOpeBRepDS_Surface missing default initalizations | ||||
Description | I got the following error running with OCCT 7.3.0 compiled with -fsanitize=undefined: src/TopOpeBRepDS/TopOpeBRepDS_Surface.cxx:60:16: runtime error: load of value 184, which is not a valid value for type 'bool' I tracked this back to the constructor: TopOpeBRepDS_Surface::TopOpeBRepDS_Surface (const Handle(Geom_Surface)& P, const Standard_Real T) : mySurface(P), myTolerance(T) { } missing an initialization for myKeep. Similarly the default constructor is missing initializations for myTolerance and myKeep. | ||||
Steps To Reproduce | Compile OCCT 7.3.0 with -fsanitize=undefined and run the test suite. | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Branch CR30553 has been created by kgv. SHA-1: 32e110c6a6d3a07b85a0566ea58230612e5248e1 Detailed log of new commits: Author: kgv Date: Mon Mar 11 23:20:44 2019 +0300 0030553: Coding - TopOpeBRepDS_Surface missing default initalizations All class fields are now initialized within every TopOpeBRepDS_Surface constructor. |
|
Patch is ready for review. http://jenkins-test-12.nnov.opencascade.com:8080/view/CR30554-master-KGV |
|
No remarks, please integrate. Note that TopOpe* packages are obsolete and are going to be removed in one of the next releases. |
|
I don't see anything in the current documentation that replaces the TopOpe* packages. I use them to answer the in/out predicates, which are important functions. Am I missing something? |
|
Combination - OCCT branch : CR30554 master SHA - ba1d9b6cf0bc7d6f74298b5184c880bdecda948e d67d4b811012eef8913d3c535c29654d0acf3c4c Products branch : master SHA - 19cf12d4f918562ea1456aa224c6f7a64b9c4ad7 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 16600.699999999953 / 16599.24999999996 [+0.01%] Products Total CPU difference: 9080.810000000034 / 9092.71000000004 [-0.13%] Windows-64-VC14: OCCT Total CPU difference: 18000.8125 / 17985.28125 [+0.09%] Products Total CPU difference: 10475.90625 / 10460.953125 [+0.14%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR30553 has been deleted by inv. SHA-1: 32e110c6a6d3a07b85a0566ea58230612e5248e1 |
|
Hello galbramc, Regarding your question in 0030553:0082873 (sorry it was overlooked): instead of TopOpe* tools for in/out checks on shapes, you can use classes BRepTopAdaptor_FClass2d and BRepClass3d_SolidClassifier. If these classes are not suitable for some reason, please report this providing relevant details (within separate issue). |
|
Thanks for following up. We found started using BRepClass_FaceClassifier and BRepClass3d_SolidClassifier. Is there a preference between BRepClass_FaceClassifier and BRepTopAdaptor_FClass2d? |
occt: master a98b97f5 2019-03-11 20:20:44 Committer: apn Details Diff |
0030553: Coding - TopOpeBRepDS_Surface missing default initalizations All class fields are now initialized within every TopOpeBRepDS_Surface constructor. |
Affected Issues 0030553 |
|
mod - src/TopOpeBRepDS/TopOpeBRepDS_Surface.cxx | Diff File | ||
mod - src/TopOpeBRepDS/TopOpeBRepDS_Surface.hxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2019-03-11 18:13 | galbramc | New Issue | |
2019-03-11 18:13 | galbramc | Assigned To | => kgv |
2019-03-11 23:11 | kgv | Summary | TopOpeBRepDS_Surface missing default initalizations => Coding - TopOpeBRepDS_Surface missing default initalizations |
2019-03-11 23:26 | git | Note Added: 0082847 | |
2019-03-12 04:34 | kgv | Relationship added | child of 0030557 |
2019-03-12 04:41 | kgv | Note Added: 0082853 | |
2019-03-12 04:41 | kgv | Assigned To | kgv => abv |
2019-03-12 04:41 | kgv | Status | new => resolved |
2019-03-12 04:41 | kgv | Product Version | 7.3.0 => 5.2.2 |
2019-03-12 04:41 | kgv | Target Version | => 7.4.0 |
2019-03-12 06:11 | abv | Note Added: 0082856 | |
2019-03-12 06:11 | abv | Assigned To | abv => bugmaster |
2019-03-12 06:11 | abv | Status | resolved => reviewed |
2019-03-12 14:28 | galbramc | Note Added: 0082873 | |
2019-03-12 16:21 | apn | Test case number | => Not needed |
2019-03-12 16:21 | apn | Note Added: 0082876 | |
2019-03-12 16:21 | apn | Status | reviewed => tested |
2019-03-17 15:40 | apn | Changeset attached | => occt master a98b97f5 |
2019-03-17 15:40 | apn | Assigned To | bugmaster => apn |
2019-03-17 15:40 | apn | Status | tested => verified |
2019-03-17 15:40 | apn | Resolution | open => fixed |
2019-03-19 10:33 | git | Note Added: 0083087 | |
2019-09-18 08:13 | abv | Note Added: 0087239 | |
2019-09-18 16:26 | galbramc | Note Added: 0087260 |