0030553: Coding - TopOpeBRepDS_Surface missing default initalizations

All class fields are now initialized within every TopOpeBRepDS_Surface constructor.