src/TopOpeBRepDS/TopOpeBRepDS_Surface.cxx
@@ -14,15 +14,17 @@
 // Alternatively, this file may be used under the terms of Open CASCADE
 // commercial license or contractual agreement.
 
+#include <TopOpeBRepDS_Surface.hxx>
 
 #include <Geom_Surface.hxx>
-#include <TopOpeBRepDS_Surface.hxx>
 
 //=======================================================================
 //function : TopOpeBRepDS_Surface
 //purpose  : 
 //=======================================================================
 TopOpeBRepDS_Surface::TopOpeBRepDS_Surface()
+: myTolerance (0.0),
+  myKeep (Standard_False)
 {
 }
 
@@ -31,24 +33,26 @@ TopOpeBRepDS_Surface::TopOpeBRepDS_Surface()
 //purpose  : 
 //=======================================================================
 
-TopOpeBRepDS_Surface::TopOpeBRepDS_Surface
-  (const Handle(Geom_Surface)& P,
-   const Standard_Real T) :
-       mySurface(P),
-       myTolerance(T)
+TopOpeBRepDS_Surface::TopOpeBRepDS_Surface (const Handle(Geom_Surface)& theSurface,
+                                            const Standard_Real theTolerance)
+: mySurface (theSurface),
+  myTolerance (theTolerance),
+  myKeep (Standard_False)
 {
 }
 
-//
-//modified by NIZNHY-PKV Tue Oct 30 09:28:33 2001 f
 //=======================================================================
 //function : TopOpeBRepDS_Surface::TopOpeBRepDS_Surface
 //purpose  : 
 //=======================================================================
-TopOpeBRepDS_Surface::TopOpeBRepDS_Surface (const TopOpeBRepDS_Surface& Other) 
+TopOpeBRepDS_Surface::TopOpeBRepDS_Surface (const TopOpeBRepDS_Surface& theOther)
+: mySurface (theOther.mySurface),
+  myTolerance (theOther.myTolerance),
+  myKeep (theOther.myKeep)
 {
-  Assign(Other);
+  //
 }
+
 //=======================================================================
 //function : Assign
 //purpose  : 
@@ -58,56 +62,4 @@ void TopOpeBRepDS_Surface::Assign(const TopOpeBRepDS_Surface& Other)
   mySurface=Other.mySurface;
   myTolerance=Other.myTolerance;
   myKeep=Other.myKeep;
-}
-//modified by NIZNHY-PKV Tue Oct 30 09:28:20 2001 t
-//
-
-//=======================================================================
-//function : Surface
-//purpose  : 
-//=======================================================================
-
-const Handle(Geom_Surface)&  TopOpeBRepDS_Surface::Surface()const 
-{
-  return mySurface;
-}
-
-
-//=======================================================================
-//function : Tolerance
-//purpose  : 
-//=======================================================================
-
-Standard_Real  TopOpeBRepDS_Surface::Tolerance()const 
-{
-  return myTolerance;
-}
-
-//=======================================================================
-//function : Tolerance
-//purpose  : 
-//=======================================================================
-
-void TopOpeBRepDS_Surface::Tolerance(const Standard_Real T)
-{
-  myTolerance = T;
-}
-
-//=======================================================================
-//function : Keep
-//purpose  : 
-//=======================================================================
-
-Standard_Boolean TopOpeBRepDS_Surface::Keep() const
-{
-  return myKeep;
-}
-//=======================================================================
-//function : ChangeKeep
-//purpose  : 
-//=======================================================================
-
-void TopOpeBRepDS_Surface::ChangeKeep(const Standard_Boolean b)
-{
-  myKeep = b;
 }
